Fix hero font size on tablets

--- a/sass/homeassistant/homepage/_hero_unit.scss
+++ b/sass/homeassistant/homepage/_hero_unit.scss
@@ -105,7 +105,7 @@
   }
 }
 
-@media only screen and (max-width: $palm-end) {
+@media only screen and (max-width: $lap-end) {
   .hero {
     h1 {
       font-size: 4rem;
@@ -114,14 +114,18 @@
     .lead {
       font-size: 1.15rem;
     }
-
     
     .hero-buttons a {
       &.primary {
         font-size: 1.25rem;
       }
     }
+  }
+}
 
+@media only screen and (max-width: $palm-end) {
+  .hero {
+    
     #HAdemo {
       display: none;
     }
